--- a/.classpath
+++ b/.classpath
@@ -6,5 +6,7 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="src" path="src"/>
+	<classpathentry kind="lib" path="src/sqljdbc4.jar"/>
+	<classpathentry kind="lib" path="src/junit-4.13.2.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
